# cashflow-scheduler

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CASH-CLI.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.verify  FINAL_UPDATE.md  Makefile  NOVEMBER_DECEMBER_CALENDAR.md  PHASE_B_PLAN_V2.md  PROGRESS.md  QUICKSTART.txt  QUICK_DEPLOY.md  README.md  SECURITY.md  SKILL_REDESIGN_PLAN.md  UX_IMPROVEMENTS.md  calendar.html  cash  cashflow-architecture.html  december_plan.json  december_schedule.md  default_plan.json  fly.toml  generate_pdf.py  instructions.md  plan.json  pyproject.toml  requirements.txt  schedule.md  updated_plan.json  vercel.json
.do/: app.yaml
.github/workflows/: ci.yml
api/: _shared.py  export.py  health.py  index.py  requirements.txt  set_eod.py  solve.py
cashflow/: cli.py
cashflow-scheduler/: test_skill.py
cashflow-scheduler-skill/: SKILL.md  test_adjust.py  test_default_snippet.py  test_json.py
cashflow-scheduler-skill/core/: cpsat_solver.py  dp_solver.py
cashflow-scheduler-skill/examples/: create_default.py  solve_basic.py  solve_from_json.py
docs/: cpsat_migration_plan.md  shadcn-redesign-plan.md  web_ui_design.md  web_ui_plan.md
scripts/: bootstrap_venv.sh  dev_all.sh  dev_run_all.sh  smoke.mjs  vercel_smoke.sh
ui/: index.html  package-lock.json  package.json
verify_service/: .dockerignore  Dockerfile  app.py  fly.toml  requirements.txt
web/: .dockerignore  .env.production  Dockerfile  README.md  dev-with-api.sh  next.config.js  package-lock.json  package.json  playwright.config.ts
(+92 files in other folders)
